--- a/file3.html
+++ b/file3.html
@@ -1,1 +1,12 @@
-Hola gggggg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Internet Explorer</title>
+</head>
+<body>
+    <p>Que tal como estan?</p>
+</body>
+</html>
